--- a/index.html
+++ b/index.html
@@ -9,3 +9,24 @@
     rel="stylesheet">
 <title>AluraFlix</title> 
 </head> 
+
+<body>
+    <header>AluraFlix</header>
+
+    <section class="chamada">
+        <div class="chamada-texto">
+            <h1>VELOZES E FURIOSOS 7</h1>
+            <p>#velozes e furiosos 7</p>
+        </div>
+
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/hujU0dw6Erk?si=JPU2jO2_gHxwDykQ"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    
+
+
