--- a/index.html
+++ b/index.html
@@ -32,4 +32,10 @@
         <div class="categoria-vídeos"
             <a href="https://youtu.be/NnDGWyfP7q4">
                 <img src="https://img.youtube.com/vi/NnDGWyfP7q4/maxresdefault.jpg" />
+            </a>
+            <a href="https://youtu.be/rph06FEXvWE">
+                <img src="https://img.youtube.com/vi/rph06FEXvWE/maxresdefault.jpg" />
+            </a>
+            <a href="https://youtu.be/a1w9x5U88jU">
+                <img src="https://img.youtube.com/vi/a1w9x5U88jU/maxresdefault.jpg" />
 
