--- a/index.html
+++ b/index.html
@@ -38,4 +38,17 @@
             </a>
             <a href="https://youtu.be/a1w9x5U88jU">
                 <img src="https://img.youtube.com/vi/a1w9x5U88jU/maxresdefault.jpg" />
+            </a>
+            <a href="https://youtu.be/N2dx2M4L8T0" />
+                <img src="https://img.youtube.com/vi/N2dx2M4L8T0/maxresdefault.jpg" />
+            </a>
+            <a href="https://youtu.be/1I6hpcRIc_c">
+                <img src="https://img.youtube.com/vi/1I6hpcRIc_c/maxresdefault.jpg" />
+            </a>
+        </div>
+    </section>
+
+</body>
+
+</html>
 
