--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="categoria">
         <h2>Filmes e séries</h2>
-        <div class="categoria-vídeos"
+        <div class="categoria-vídeos">
             <a href="https://youtu.be/NnDGWyfP7q4">
                 <img src="https://img.youtube.com/vi/NnDGWyfP7q4/maxresdefault.jpg" />
             </a>
